--- a/style.css
+++ b/style.css
@@ -65,17 +65,78 @@ header p {
 main {
   background-color: var(--white);
   box-shadow: 0px 0px 10px var(--light-grayish-blue-slider);
-  padding: 20px;
+  padding: 30px;
   border-radius: 10px;
+  text-align: center;
+}
+
+.pricing-container {
+  margin-bottom: 30px;
+
+  background-color: rgba(255, 0, 0, 0.267);
+}
+
+.slider-container {
+  padding: 30px 0;
+  background-color: rgb(255, 255, 191);
+}
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+
+  background: var(--light-grayish-blue-slider);
+  border-radius: 10px;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 40px; 
+  height: 40px;
+  border-radius: 100px;
+
+  background: var(--strong-cyan);
+  cursor: pointer;
+  background-image: url("images/icon-slider.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+.pricing-container h4 {
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  color: var(--grayish-blue);
+}
+
+.price {
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.perks-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  margin: 20px 0;
 }
 
 .perk {
   display: flex;
+  color: var(--grayish-blue);
+  gap: 20px;
 }
 
 button {
   background-color: var(--dark-desaturated-blue);
-  color: var(--white);
+  color: var(--pale-blue);
   padding: 10px 30px;
   border-radius: 20px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 600;
 }
