--- a/style.css
+++ b/style.css
@@ -72,38 +72,54 @@ main {
 
 .pricing-container {
   margin-bottom: 30px;
-
-  background-color: rgba(255, 0, 0, 0.267);
 }
 
 .slider-container {
   padding: 30px 0;
-  background-color: rgb(255, 255, 191);
 }
 
 .slider {
-  -webkit-appearance: none;
-  appearance: none;
+  width: 100%;
+  height: 8px;
+  background: var(--light-grayish-blue-slider);;
 
-  background: var(--light-grayish-blue-slider);
-  border-radius: 10px;
+  outline: none;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
 }
 
 .slider::-webkit-slider-thumb {
+  height: 40px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  
+  background: var(--strong-cyan);
+  background-image: url("images/icon-slider.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+
   -webkit-appearance: none;
   appearance: none;
-  width: 40px; 
+}
+
+.slider::-moz-range-thumb {
   height: 40px;
-  border-radius: 100px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+
+  -webkit-appearance: none;
+  appearance: none;
 
   background: var(--strong-cyan);
-  cursor: pointer;
   background-image: url("images/icon-slider.svg");
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
 }
-
 
 .pricing-container h4 {
   text-transform: uppercase;
@@ -114,8 +130,60 @@ main {
 }
 
 .price {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 800;
+  padding-right: 5px;
+}
+
+.billing-container {
+  display: flex;
+  gap: 5px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.billing-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--light-grayish-blue-slider);
+  border-radius: 34px;
+  -webkit-transition: 0.4s;
+  transition: .4s;
+}
+
+.billing-slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .billing-slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(25px);
 }
 
 .perks-container {
